# Changelog
All wesentlichen Änderungen für dieses Projekt werden hier dokumentiert.

Das Format basiert auf link:https://keepachangelog.com/en/1.0.0[Keep a Changelog].

## [12.48.0] -- 2022-07-20
* #217 Es wird nicht mehr bei jedem SQL-Aufruf erwartet, dass die View/Tabelle einen KeyLong besitzt.
* Ein weiteres Format von Fehlermeldungen unterstützen: 'ADO|Zahl|Fehlermeldung'
* CAS-Client-API um die Methode `sendGenericProcedureRequest` erweitern, um beliebige Objekte von `data/procedure` abzufragen.
Dies ist besonders nützlich, wenn beispielsweise ein PDF-Report vom CAS abgefragt wird.

## [12.47.1] - 2022-06-24
* #274 Fehlermeldungen, welche nicht mit 'msg.' beginnen, verarbeitbar machen.
* #291 Doku für Logs hinzugefügt.

## [12.47.0] - 2022-06-17
* API für Extensions, welche Nachrichten an einen Dienst schicken möchten.

## [12.46.0 - 12.46.1] - 2022-06-09
* Neue Property(aero.minova.database.maxResultSetCount) für application.properties, wird für SQL-Prozeduren ausgewertet, um größere Rückgabewerte zu Erlauben.
* Update auf SpringBoot 2.7.0: MS-SQL Dependency wurde von 9.x auf 10.x aktualisiert. Das heißt der Wert für `encrypt` ist nun per Default `true`. Siehe `support.adoc` und https://github.com/spring-projects/spring-boot/issues/31157

## [12.45.0] - 2022-05-25

* Erstelle Standard-Prozedur-Erweiterung `xpcasEncodePassword` damit der Nutzer keine Entwicklungsumgebung braucht,
um Passwörter zu hashen.
* Einbinden des ServiceNotifierServices in den QueueService, damit Dienstextensions Listener registrieren können, ohne dass NullPointerExceptions geworfen werden.
* Integration von SonarQube, OWASP Dependency-Check und JaCoCo in die CI-Pipeline
* Update auf SpringBoot 2.6.7
# Update weiterer Abhängigkeiten

## [12.44.1] - 2022-05-19

* Korrektur des ServiceNotifierServices, damit NewsfeedListener angelegt werden können.
* Automatisches Anlegen eines Admins mit *allen* Rechten am Ende des Setups.
* Auslagern der Cache Methoden aus dem ServiceNotifierService.
